# Student-Campus-Enrollment

./: .dockerignore  .gitignore  README.md  compose.yml
Backend/: Dockerfile  alembic.ini  database.py  main.py  models.py  pyproject.toml
Backend/migrations/: env.py
Backend/migrations/versions/: 0ca292376ba5_adding_age_to_users_table.py  2c709b96a150_updating_imageurl_to_accept_no_values_.py  2cd8d0c16ab1_initial_migration.py  821384c1c9cb_created_campuses_table.py  97af52e3649a_creating_one_to_many_relationship_.py  9bc210386c55_added_missing_name_field_in_campuses_.py  a73ee1581210_making_campus_id_optional_on_post.py  aee8d2d50999_changing_imgurl_from_default_to_server_.py  bfa4c39263a6_tweaking_imgurl_to_allow_default.py  f0b1233a55fa_creating_student_table_with_first_and_.py
Frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
Frontend/src/: App.jsx  index.css  main.jsx
Frontend/src/components/: Campuses.jsx  Footer.jsx  Homepage.jsx  Navbar.jsx  SingleCampus.jsx  SingleStudent.jsx  Students.jsx
Frontend/src/features/: campusesSlice.jsx  singleCampusSlice.jsx  singleStudentSlice.jsx  studentsSlice.jsx
Frontend/src/store/: store.jsx
