[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alejandro <89477369+alejandro-baez@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
alembic = "^1.14.1"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
