[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alejandro <89477369+alejandro-baez@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
alembic = "^1.14.1"
sqlalchemy = "^2.0.37"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"
pydantic = {extras = ["email"], version = "^2.10.6"}
email-validator = "^2.2.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
